--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -21,9 +21,11 @@ I like to work within the tidyverse environment, which I think is one advantages
 
 ```{r}
 
+# this will install R if not already available
 if (!require("tidyverse", quietly = TRUE))
     install.packages("tidyverse")
 
+# load the tidyverse package
 library(tidyverse)
 
 ```
@@ -34,7 +36,7 @@ I will demonstrate this project by first creating nine dummy text files that I s
 
 ```{r}
 
-# create a string of files to create
+# a string of files to create
 file_to_create = c(paste0('a', 1:3, '.txt'), paste0('b', 1:3, '.txt'), paste0('c', 1:3, '.txt'))
 
 # loop each filename into the file.create function
@@ -60,10 +62,10 @@ The task now is to group and move these files into different folders based on th
 
 ```{r, message=F, echo=F}
 
-file_to_create %>% 
-  tibble %>%
-  rename('filename' = '.') %>%
-  mutate(folder = paste0('folder_', str_extract(string=filename, pattern = '^[[:letter:]]{1}')))
+file_to_create %>% # work with the file_to_create variable
+  tibble %>% # convert to tibble format 
+  rename('filename' = '.') %>% # rename the default column name of '.' into 'filename'
+  mutate(folder = paste0('folder_', str_extract(string=filename, pattern = '^[[:letter:]]{1}'))) # create a new column by combining the string 'folder_' and the first letter of the file names together
 
 ```
 
@@ -99,17 +101,20 @@ We now have the dummy files and a helper file denoting where each file should be
 
 ```{r}
 
-for (x in readLines(con = 'helper_file.csv')) {
+for (x in readLines(con = 'helper_file.csv')) { # read file in the working directory line by line
   
-  filename = str_split(string=x, pattern = ',', n=2)[[1]][1]
+  # split the line into two variables separated by a comma (as the input is a csv file) and extract as filename and foldername
+  filename = str_split(string=x, pattern = ',', n=2)[[1]][1] 
   foldername = str_split(string=x, pattern = ',', n=2)[[1]][2]
   
   if (file.exists(foldername)) {
     
+    # copy file into directory if directory already exists
     file.copy(from = filename, to = paste0(foldername, '/', filename))
   
     } else {
     
+    # create directory, then copy file into directory
     dir.create(path = foldername)
     file.copy(from = filename, to = paste0(foldername, '/', filename))
   }
@@ -122,7 +127,7 @@ We can check to see if we have completed our task by looking at the directory st
 
 ```{r}
 
-list.files(pattern='txt', recursive = T)
+list.files(pattern='txt', recursive = T) # set recursive=T to recursively evaluate the sub-directories
 
 ```
 
@@ -130,7 +135,7 @@ Seems like we have successfuly copied the files into their respective folders. W
 
 ```{r}
 
-file.remove(file_to_create)
+file.remove(file_to_create) # remove files as defined in the file_to_create variable
 
 list.files(pattern='txt', recursive = T)
 
