--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -11,13 +11,13 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Background
 
-One of a situation we might face in our daily dealings with data and files involve having to segregrate files from a single directory into several subdirectories, be it for aesthetics, organisation, or to facilitate downstream analyses. In my case, I have downloaded ~2000 DNA sequence data belonging to multiple original projects from the NCBI public repository into a single folder to ease data processing, but now am required to process data from each project separately. It is easy to do this manually if we are only dealing with a few files. In my case, however, manually segregating ~2000 files into 40 subdirectories is simply not a productive use of time. 
+One of the situation we might face in our daily dealings with data and files involve having to segregrate files from a single directory into several subdirectories, be it for aesthetics, organisation, or to facilitate downstream analyses. In my case, I have previously downloaded ~2000 DNA sequence data belonging to multiple original projects from the NCBI public repository into a single folder, but now am required to process data from each project separately. It is easy to do this manually if we are only dealing with a few files. In my case, however, manually segregating ~2000 files into 40 subdirectories is simply not a productive use of time. 
 
 To facilitate the lazy me, I came up with the script below to bypass the boring manual job and complete it in seconds. 
 
 ## Loading the tidyverse environment
 
-I like to work within the tidyverse environment, which I think is one advantages of scripting in R. Tidyverse provides a collection of functions and script formatting which helps make our script more intuitive. You can load the tidyverse package, or install it if you haven't using the following script:
+I like to work within the tidyverse environment, which I think is one of the advantages of scripting in R. Tidyverse provides a collection of functions and script formatting which helps make our script more intuitive. You can load the tidyverse package, or install it if you haven't using the following script:
 
 ```{r}
 
@@ -32,7 +32,7 @@ library(tidyverse)
 
 ## Preparing dummy data files
 
-I will demonstrate this project by first creating nine dummy text files that I shall name `r list.files(path='input', pattern='.txt')` for convenience's sake. We can achieve this in R by doing a simple loop with the `file.create()` function:
+I will demonstrate this project by first creating nine dummy text files that I shall name `{a-c}{1-3}.txt` for convenience's sake. We can achieve this in R by doing a simple loop with the `file.create()` function:
 
 ```{r}
 
@@ -62,10 +62,10 @@ The task now is to group and move these files into different folders based on th
 
 ```{r, message=F, echo=F}
 
-file_to_create %>% # work with the file_to_create variable
-  tibble %>% # convert to tibble format 
-  rename('filename' = '.') %>% # rename the default column name of '.' into 'filename'
-  mutate(folder = paste0('folder_', str_extract(string=filename, pattern = '^[[:letter:]]{1}'))) # create a new column by combining the string 'folder_' and the first letter of the file names together
+file_to_create %>% 
+  tibble %>% 
+  rename('filename' = '.') %>% 
+  mutate(folder = paste0('folder_', str_extract(string=filename, pattern = '^[[:letter:]]{1}'))) 
 
 ```
 
@@ -74,10 +74,14 @@ From the above example, I want to move files whose names start with `a` into `fo
 ```{r}
 
 helper_file = 
+  # work with the file_to_create variable
   file_to_create %>% 
-  tibble %>%
-  rename('filename' = '.') %>%
-  mutate(folder = paste0('folder_', str_extract(string=filename, pattern = '^[[:letter:]]{1}')))
+  # convert to tibble format 
+  tibble %>% 
+  # rename the default column name of '.' into 'filename'
+  rename('filename' = '.') %>% 
+  # create a new column of target folder name by combining the string 'folder_' and the first letter of the file name together
+  mutate(folder = paste0('folder_', str_extract(string=filename, pattern = '^[[:letter:]]{1}'))) 
 
 helper_file
 
@@ -122,6 +126,8 @@ for (x in readLines(con = 'helper_file.csv')) { # read file in the working direc
 }
 
 ```
+
+Previously, we set the `column names=F` when writing our helper file as the above loop functions through reading the file line by line. As such, the presence of column names is unnecessary and their exclusion simplifies this loop. 
 
 We can check to see if we have completed our task by looking at the directory structure:
 
